--- a/scripts/gee_manpage.html
+++ b/scripts/gee_manpage.html
@@ -323,7 +323,7 @@ standard and well-supported workflow.  "gee" is also an instructional tool: by
 showing each command as it executes, gee helps users learn git.
 </p>
 
-<a name="Features"></a><h2 id="Features">Features:</h2>
+<h2 id="Features">Features:</h2>
 <p>
 Uses the "worktree" feature so that:
 </p>
@@ -350,7 +350,7 @@ Supports multi-homed development (user can do work on various hosts without
 NFS-mounted home directories).
 </p>
 
-<a name="An"></a><h2 id="An">An example of simple use:</h2>
+<h2 id="An">An example of simple use:</h2>
 <p>
 1. Run "gee init" to clone and check out the enfabrica/internal repo.  This
    only needs to be done once per home directory.
@@ -385,7 +385,7 @@ NFS-mounted home directories).
 8. When approved, run "gee submit_pr" to merge your change.
 </p>
 
-<a name="An"></a><h2 id="An">An example of more complex use:</h2>
+<h2 id="An">An example of more complex use:</h2>
 <p>
 You can continue to develop a second feature while the first feature is out for
 review.
