fix table headers

--- a/scripts/gee_manpage.html
+++ b/scripts/gee_manpage.html
@@ -413,7 +413,7 @@ review.
 <h2>Command Summary</h2>
 
 <table>
-  <th><td>Command</td><td>Summary</td></th>
+  <tr><th>Command</th><th>Summary</th></tr>
   <tr><td>
     <a href="#init">init</a>
   </td><td>
