--- a/scripts/gee_manpage.html
+++ b/scripts/gee_manpage.html
@@ -334,7 +334,7 @@ Uses the "worktree" feature so that:
 <li>users can have uncommitted changes pending in more than one branch.</li>
 </ol>
 <p>
-All branch directories are named ~/gee/<REPO>/<<code>BRANCH</code>>.
+All branch directories are named ~/gee/&lt;REPO&gt;/&lt;<code>BRANCH</code>&gt;.
 </p>
 <p>
 All local commits are automatically backed up to github.
@@ -600,7 +600,7 @@ review.
 
 <h3 id=init>init</h3>
 <p>
-Usage: gee init [<repo>]
+Usage: gee init [&lt;repo&gt;]
 </p>
 <p>
 Arguments:
@@ -611,13 +611,13 @@ Arguments:
 </p>
 <p>
 `gee init` creates a new gee-controlled workspace in the user's home directory.
-The directory `~/gee/<repo>/main` will be created and populated, and all
-other branches will be checked out into `~/gee/<repo>/<branch>`.
+The directory `~/gee/&lt;repo&gt;/main` will be created and populated, and all
+other branches will be checked out into `~/gee/&lt;repo&gt;/&lt;branch&gt;`.
 </p>
 
 <h3 id=config>config</h3>
 <p>
-Usage: gee config <option>
+Usage: gee config &lt;option&gt;
 </p>
 <p>
 Valid configuration options are:
@@ -635,16 +635,16 @@ Valid configuration options are:
 Aliases: mkbr
 </p>
 <p>
-Usage: gee make_branch <branch-name> [<commit-ish>]
+Usage: gee make_branch &lt;branch-name&gt; [&lt;commit-ish&gt;]
 Aliases: mkbr
 </p>
 <p>
 Create a new branch based on the current branch.  The new branch will be located in the
 directory:
-  ~/gee/<repo>/<branch-name>
+  ~/gee/&lt;repo&gt;/&lt;branch-name&gt;
 </p>
 <p>
-If <commit-ish> is provided, sets the HEAD of the newly created branch to that
+If &lt;commit-ish&gt; is provided, sets the HEAD of the newly created branch to that
 revision.
 </p>
 
@@ -655,18 +655,18 @@ Usage: gee log
 
 <h3 id=diff>diff</h3>
 <p>
-Usage: gee diff [<files...>]
+Usage: gee diff [&lt;files...&gt;]
 </p>
 <p>
 Diffs the current branch against its parent branch.
 </p>
 <p>
-If <files...> are omited, defaults to all files.
+If &lt;files...&gt; are omited, defaults to all files.
 </p>
 
 <h3 id=pack>pack</h3>
 <p>
-Usage: gee pack [-c] [-o <file.pack>]
+Usage: gee pack [-c] [-o &lt;file.pack&gt;]
 </p>
 <p>
 Creates a pack file containing all unsubmitted changes in this branch.
@@ -678,7 +678,7 @@ Flags:
 
 <h3 id=unpack>unpack</h3>
 <p>
-Usage: gee unpack <file.pack>
+Usage: gee unpack &lt;file.pack&gt;
 </p>
 <p>
 "unpack" attempts to patch the current branch from a pack file.
@@ -797,7 +797,7 @@ Usage: gee get_parent
 
 <h3 id=set_parent>set_parent</h3>
 <p>
-Usage: gee set_parent <parent-branch>
+Usage: gee set_parent &lt;parent-branch&gt;
 </p>
 <p>
 Gee keeps track of which branch each branch is branched from.  You can
@@ -810,7 +810,7 @@ to do a "gee update" operation afterwards.
 Aliases: push c
 </p>
 <p>
-Usage: gee commit [<git commit options>]
+Usage: gee commit [&lt;git commit options&gt;]
 </p>
 <p>
 Commits all outstanding changes (to the local branch, not the upstream branch),
@@ -826,7 +826,7 @@ Example:
 
 <h3 id=revert>revert</h3>
 <p>
-Usage: gee revert <files...>
+Usage: gee revert &lt;files...&gt;
 </p>
 <p>
 Reverts changes to the specified files, so that they become identical to the
@@ -842,7 +842,7 @@ Example:
 
 <h3 id=pr_checkout>pr_checkout</h3>
 <p>
-Usage: gee pr_checkout <PR>
+Usage: gee pr_checkout &lt;PR&gt;
 </p>
 <p>
 Creates a new branch containing the specified pull request.
@@ -853,7 +853,7 @@ Creates a new branch containing the specified pull request.
 Aliases: lspr list_pr prls
 </p>
 <p>
-Usage: gee pr_list [<user>]
+Usage: gee pr_list [&lt;user&gt;]
 </p>
 <p>
 Lists information about PRs associated with the specified user (or yourself, if
@@ -887,7 +887,7 @@ PRs pending their review:
 Aliases: edpr pred edit_pr
 </p>
 <p>
-Usage: gee edit_pr <args>
+Usage: gee edit_pr &lt;args&gt;
 </p>
 <p>
 Edit an outstanding pull request.
@@ -912,7 +912,7 @@ View an outstanding pull request.
 Aliases: mail send make_pr mkpr prmk
 </p>
 <p>
-Usage: gee make_pr <gh-options>
+Usage: gee make_pr &lt;gh-options&gt;
 </p>
 <p>
 Creates a new pull request from this branch.
@@ -948,7 +948,7 @@ Merges an approved pull request.
 Aliases: rmbr
 </p>
 <p>
-Usage: gee remove_branch <branch-name>
+Usage: gee remove_branch &lt;branch-name&gt;
 </p>
 <p>
 Removes a branch and it's associated directory.
@@ -956,7 +956,7 @@ Removes a branch and it's associated directory.
 
 <h3 id=fix>fix</h3>
 <p>
-Usage: gee fix [<files>]
+Usage: gee fix [&lt;files&gt;]
 </p>
 <p>
 Looks for a "fix_format.sh" script in the root directory of the current branch,
@@ -978,7 +978,7 @@ out as formatting rules are highly project specific.
 
 <h3 id=gcd>gcd</h3>
 <p>
-Usage: gcd [-b] <branch>[/<path>]
+Usage: gcd [-b] &lt;branch&gt;[/&lt;path&gt;]
 </p>
 <p>
 The "gee gcd" command is not meant to be used directly, but is instead designed
@@ -996,8 +996,8 @@ Once imported, the "gcd" function can be used to change directory between
 branches.
 </p>
 <p>
-If only "<branch>" is specified, "gcd" will change directory to the same
-relative directory in another branch.  If "<branch>/<path>" is specified,
+If only "&lt;branch&gt;" is specified, "gcd" will change directory to the same
+relative directory in another branch.  If "&lt;branch&gt;/&lt;path&gt;" is specified,
 "gcd" will change directory to the specified path beneath the specified
 branch.
 </p>
@@ -1056,7 +1056,7 @@ your branch with other users (in advance of sending out a PR).
 
 <h3 id=repair>repair</h3>
 <p>
-Usage: gee repair <command>
+Usage: gee repair &lt;command&gt;
 </p>
 <p>
 Gee tries to control some metadata and attempts to file away some of the
@@ -1133,7 +1133,7 @@ Usage: gee version
 
 <h3 id=help>help</h3>
 <p>
-Usage: gee help [<command>|usage|commands|html]
+Usage: gee help [&lt;command&gt;|usage|commands|html]
 </p>
 <p>
 The "usage" option produces gee's manual.
