--- a/ghinviter/assets/index.html
+++ b/ghinviter/assets/index.html
@@ -9,6 +9,8 @@
       content="Web site created using create-react-app"
     />
 
+    <link rel="stylesheet" href="/ui/main.css">
+
 <!--
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
@@ -22,6 +24,6 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
 
-    <script type="module" src="/ui.js"></script>
+    <script type="module" src="/ui/main.js"></script>
   </body>
 </html>
